# poetry-import-requirements-plugin

./: .gitignore  README.md  poetry-1.2.0a1-py3-none-any.whl  pyproject.toml
poetry_import_requirements_plugin/: errors.py  plugin.py
